# infemus

./: README.md  pyproject.toml
figures/: fig1.ipynb  fig2-3-4.ipynb  fig5.ipynb  fig6-7.ipynb  fig8.ipynb  fig9.ipynb
infemus/: emus.py  griddy.py  infemus.py
infemus/models/: lgp_iid.py  logitgp.py  logitx.py
infemus/tools/: linalg.py  metropolis_mv.py
